# raytracing

./: .gitignore  CMakeLists.txt  README.md  image.ppm  notes.txt
src/: camera.h  color.h  common.h  hittable.h  interval.h  main.cpp  ray.h  sphere.h  vec3.h
